Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.3.2
-
Ubuntu 13.04
-
a212b1f745f660c3fe74be520f5b360c573f46f8
Description
Steps to reproduce:
1. Write simple Component such as:
Component { id: dummy Item {} }
2. put cursor on Component and press Alt+Enter
3. select "Move component into Separate File"
4. press "Cancel" in dialog
Attachments
For Gerrit Dashboard: QTCREATORBUG-14175 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
109242,2 | Fixed wrong behavior of "Move Component in Separate File" for qml. | master | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |
109425,2 | Fixed wrong behavior of "Move Component in Separate File" for qml. | 3.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |