Fixed wrong behavior of "Move Component in Separate File" for qml.

The dialog accepted/rejected value is now checked.

Task-number: QTCREATORBUG-14175
Change-Id: I9a39c0cf87b7e11613a333b2d3a63b77e39b6d97
Reviewed-by: Eike Ziller <eike.ziller@theqtcompany.com>